--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Simple NFT</title>
+  <!-- Исправленная строка - используем официальный CDN -->
   <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js"></script>
   <style>
     body { font-family: Arial; text-align: center; margin-top: 50px; }
@@ -19,14 +20,17 @@
 <body>
   <h1>Simple NFT Minting</h1>
   <button id="mintBtn">Mint NFT</button>
-  <p id="status"></p>
-  
+  <p id="status">Status: Ready</p>
+
   <script>
+    // Проверка загрузки ethers
+    if (typeof ethers === 'undefined') {
+      document.getElementById('status').textContent = 'Error: Failed to load ethers.js';
+      throw new Error("Ethers.js not loaded!");
+    }
+
     const contractAddress = "0x611b24d5B7df8d4dcE0a3b5aA2e318eCe74e39fa";
-    const abi = [
-      "function mint(address to) external",
-      "function balanceOf(address owner) external view returns (uint256)"
-    ];
+    const abi = ["function mint(address to) external"];
 
     document.getElementById("mintBtn").onclick = async () => {
       const btn = document.getElementById("mintBtn");
@@ -53,7 +57,6 @@
         await tx.wait();
         
         status.textContent = "🎉 NFT minted successfully!";
-        btn.textContent = "Mint Another";
       } catch (error) {
         status.textContent = `Error: ${error.message}`;
         console.error(error);
